--- a/test/test-data/pandoc.html
+++ b/test/test-data/pandoc.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <title>Test</title>
   <style>
+    /* Default styles provided by pandoc.
+    ** See https://pandoc.org/MANUAL.html#variables-for-html for config info.
+    */
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
     div.columns{display: flex; gap: min(4vw, 1.5em);}
@@ -30,13 +33,13 @@
 </header>
 <table>
 <thead>
-<tr class="header">
+<tr>
 <th>Property</th>
 <th>Description</th>
 </tr>
 </thead>
 <tbody>
-<tr class="odd">
+<tr>
 <td>Status</td>
 <td><dl><dt><a href="other.html#Open">Open</a><dd>Not yet finished<dt>Closed<dd>No longer open</dl></td>
 </tr>
